# kcometen

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README.md
src/: CMakeLists.txt  bezier.cpp  bezier.h  comet.h  cometen3.cpp  cometen3.h  cometenmath.cpp  cometenmath.h  cometenscene.cpp  cometenscene.h  curvecomet.cpp  curvecomet.h  decal.cpp  decal.h  explosion.cpp  explosion.h  global.h  glow.cpp  glow.h  kcometen4.cpp  kcometen4.desktop  kcometen4.h  kcometen4.kss.1  kcometen4ui.ui  kglcometen4.cpp  kglcometen4.h  lightning.cpp  lightning.h  particlesystem.cpp  particlesystem.h  pcomet.cpp  pcomet.h  rotatecomet.cpp  rotatecomet.h  settings.cpp  settings.h  vec.cpp  vec.h
